small fix in invite to box color on mobile & tablet

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
@@ -407,7 +407,7 @@
 }
 
 
-@media(max-width: 600px) {
+@media(max-width: 960px) {
     .invite-container {
         position: fixed;
         bottom: 0;
@@ -424,6 +424,8 @@
         .portlet.light.invite {
             border-radius: 100%;
             width: initial;
+            background: @backgroundColorRed !important;
+
 
             button {
                 padding: 10px;
