--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.rtl.css
@@ -367,7 +367,7 @@
 .invite .tab-content .buttons > a:hover {
   color: #f5f5f5;
 }
-@media (max-width: 600px) {
+@media (max-width: 960px) {
   .invite-container {
     position: fixed;
     bottom: 0;
@@ -385,6 +385,7 @@
   .invite-container .portlet.light.invite {
     border-radius: 100%;
     width: initial;
+    background: #db4437 !important;
   }
   .invite-container .portlet.light.invite button {
     padding: 10px;
